--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -26,3 +26,11 @@ jobs:
         # Run this even if linting failed
         if: always()
         run: yarn test
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install modules
+        run: yarn
+      - name: Run tests
+        run: yarn test
