All tests should work

--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -1,4 +1,4 @@
-name: lint-test
+name: tests
 on:
   push:
     branches:
@@ -25,12 +25,4 @@ jobs:
       - name: Test
         # Run this even if linting failed
         if: always()
-        run: yarn test
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Install modules
-        run: yarn
-      - name: Run tests
         run: yarn test
