--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "node": "20"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "node ./src/generate.js && cpy public dist",
     "dev": "browser-sync start --serveStatic ./dist --server --files ./public/styles.css ./dist/*.*",
     "test": "cross-env NODE_OPTIONS='--experimental-vm-modules' NODE_NO_WARNINGS=1 jest ./*.test.js --silent",
@@ -19,6 +21,7 @@
     "lint:eslint": "eslint ./src/**/*.js",
     "lint:stylelint": "stylelint ./public/styles.css"
   },
+  "homepage": "https://hannajonsd.github.io/WebProgramming2-V1",
   "devDependencies": {
     "@babel/core": "^7.23.9",
     "@babel/preset-env": "^7.23.9",
@@ -32,6 +35,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
+    "gh-pages": "^6.1.1",
     "jest": "^29.7.0",
     "prettier": "^3.2.2",
     "stylelint": "^16.1.0",
